@@ -160,3 +160,4 @@ Release 1.7
 * Implemented FR 2686903 [ERDesignerNG] Store main window size
 * Implemented FR 2675574 [ERDesignerNG] Resizable dialog windows
 * Implemented FR 1889667 [ERDesignerNG] Allow editing of Edge Waypoints ( right click + ALT )
+* Implemented FR 2686546 [ERDesignerNG] Save vs. Save As
